--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,12 +49,19 @@
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/throwDiceButton"
+            android:id="@+id/throw6DiceButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="throwDice"
             android:text="Throw a 6-faced dice"
             android:textAlignment="center" />
+
+        <Button
+            android:id="@+id/throw10DiceButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="throwDice"
+            android:text="Throw a 10-faced dice" />
 
         <TextView
             android:id="@+id/diceValue"
