--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,42 +37,45 @@
         app:layout_constraintTop_toBottomOf="@+id/title">
 
         <TextView
-            android:id="@+id/diceThrowing"
-            android:layout_width="match_parent"
+            android:id="@+id/question"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:paddingVertical="10sp"
-            android:text="Dice Throwing"
+            android:text="What does the Android logo represent?"
             android:textAlignment="center"
             android:textColor="#F6F6F6"
             android:textSize="16sp"
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/throw6DiceButton"
-            android:layout_width="wrap_content"
+            android:id="@+id/answer1"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="throwDice"
-            android:text="Throw a 6-faced dice"
+            android:onClick="handleAnswer"
+            android:text="A robot."
             android:textAlignment="center" />
 
         <Button
-            android:id="@+id/throw10DiceButton"
-            android:layout_width="wrap_content"
+            android:id="@+id/answer2"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="throwDice"
-            android:text="Throw a 10-faced dice" />
+            android:onClick="handleAnswer"
+            android:text="A frog." />
 
-        <TextView
-            android:id="@+id/diceValue"
-            android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/answer3"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:paddingVertical="10sp"
-            android:text="Dice Throwing"
-            android:textAlignment="center"
-            android:textColor="#F6F6F6"
-            android:textSize="12sp" />
+            android:onClick="handleAnswer"
+            android:text="A flying rocket." />
+
+        <Button
+            android:id="@+id/answer4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="handleAnswer"
+            android:text="A broccoli." />
 
     </LinearLayout>
 
