--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
         app:layout_constraintVertical_bias="0.12" />
 
     <LinearLayout
+        android:id="@+id/card"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -47,35 +48,6 @@
             android:textColor="#F6F6F6"
             android:textSize="16sp"
             android:textStyle="bold" />
-
-        <Button
-            android:id="@+id/answer1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="handleAnswer"
-            android:text="A robot."
-            android:textAlignment="center" />
-
-        <Button
-            android:id="@+id/answer2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="handleAnswer"
-            android:text="A frog." />
-
-        <Button
-            android:id="@+id/answer3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="handleAnswer"
-            android:text="A flying rocket." />
-
-        <Button
-            android:id="@+id/answer4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="handleAnswer"
-            android:text="A broccoli." />
 
     </LinearLayout>
 
