--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -28,7 +28,20 @@
             android:textAlignment="center"
             android:textAllCaps="false"
             android:textColor="#FFFFFF"
+            android:textSize="24sp"
             android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/scoreGuideText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="50sp"
+            android:paddingBottom="50sp"
+            android:text="TextView"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp" />
 
         <LinearLayout
             android:id="@+id/registerUser"
@@ -45,7 +58,7 @@
                 android:text="New Username:"
                 android:textAlignment="center"
                 android:textColor="#FFFFFF"
-                android:textSize="12sp" />
+                android:textSize="20sp" />
 
             <EditText
                 android:layout_width="wrap_content"
@@ -56,7 +69,7 @@
                 android:textAlignment="center"
                 android:textColor="#FFFFFF"
                 android:textColorHint="#B1AAAA"
-                android:textSize="10sp" />
+                android:textSize="20sp" />
 
             <Button
                 android:id="@+id/submitUser"
@@ -64,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:text="Register"
                 android:textAlignment="center"
-                android:textSize="12sp" />
+                android:textSize="20sp" />
 
         </LinearLayout>
     </LinearLayout>
