--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -61,6 +61,7 @@
                 android:textSize="20sp" />
 
             <EditText
+                android:id="@+id/usernameInput"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -75,6 +76,7 @@
                 android:id="@+id/submitUser"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="handleClick"
                 android:text="Register"
                 android:textAlignment="center"
                 android:textSize="20sp" />
